# hoot

./: .gitignore  DEVELOPMENT_SETUP.md  ENVIRONMENT_SETUP.md  README-startup.md  README.md  SETUP.md  check-status.sh  deploy-contract.sh  how-to-setup.md  start-anvil.sh  start-frontend.sh  start-project.sh  start-supabase.sh
.cursor/commands/: start-locally.md
.cursor/plans/: refactor-edge-functions-be7098d9.plan.md
.cursor/rules/: frontend-wagmi.mdc  solidity-rules.mdc  supabase-rules.mdc
backend/src/: package-lock.json
backend/supabase/: config.toml
contracts/: MAKEFILE_USAGE.md  Makefile  README.md  env.example  foundry.toml  tunnel-anvil.sh
contracts/script/: Deploy.s.sol  DeployAsyncQuizPoolBase.s.sol  DeployAsyncQuizPoolBaseSepolia.s.sol  DeployAsyncQuizPoolLocal.s.sol  DeployBase.s.sol  DeployBaseSepolia.s.sol  DeployBonus.s.sol  DeployBonusBaseSepolia.s.sol  DeployProgressive.s.sol  DeployProgressiveBaseSepolia.s.sol  DeploySurvival.s.sol  DeploySurvivalBaseSepolia.s.sol
contracts/src/: AsyncQuizPool.sol  HootQuizManager.sol  (+4 more)
frontend/: INTEGRATION_SUMMARY.md  minikit.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  tunnel-frontend.sh
frontend-dummmy/: env.example  package-lock.json  package.json
hoot-calimero/hoot-calimero-app/logic/: Cargo.toml  README.md  build.sh
hoot-calimero/hoot-calimero-app/logic/res/: abi.json  kv_store.wasm
hoot-calimero/hoot-calimero-app/logic/src/: board.rs  events.rs  game.rs  lib.rs  players.rs  validation.rs
hoot-enclave/: deployed_contracts.json  package.json  pnpm-lock.yaml
(+249 files in other folders)
